# Casper-NFT-Marketplace

./: README.md  package.json
.github/workflows/: gh-pages.deploy.yml
casper-contracts-js-client/: .env.example  .gitignore  README.md  lerna.json  mockData.ts  package-lock.json  package.json  tsconfig.build.json
casper-contracts-js-client/e2e/: utils.ts
casper-contracts-js-client/e2e/cep47/: fixture.ts  install.ts  usage.ts
casper-contracts-js-client/e2e/erc20/: install.ts  installed.ts
casper-contracts-js-client/e2e/market/: install.ts
contracts/cep-market/: Cargo.toml  Makefile  todo.md
contracts/cep-market/contract/: Cargo.toml
contracts/cep-market/tests/: Cargo.toml
contracts/market/: .gitignore  Cargo.toml  Makefile  README.md
contracts/market/market/: Cargo.toml
contracts/market/market-offer-purse/: Cargo.toml
contracts/market/market/src/: data.rs  event.rs  lib.rs  market.rs
contracts/market/tests/: Cargo.toml
front-end/: README.md  next.config.js  package-lock.json  package.json
front-end/src/: mockData.ts
front-end/src/button/: Button.tsx
front-end/src/components/: MyCard.tsx
front-end/src/hero/: HeroOneButton.tsx
front-end/src/layout/: Meta.tsx
front-end/src/pages/: _app.tsx  _mainLinks.tsx  _user.tsx  index.tsx  mint.tsx  my-nfts.tsx
front-end/src/styles/: dashboard-cyber.module.scss
front-end/src/templates/: Hero.tsx  VerticalFeatures.tsx
server/: .env.template  LICENSE  README.md  app.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
server/src/: toastConfig.ts
(+66 files in other folders)
