[package]
name = "market"
version = "0.2.0"
authors = [""]
edition = "2018"

[dependencies]
hex = { version = "0.4.3", default-features = false }
casper-contract = "1.4.3"
casper-types = "1.4.4"
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "market"
path = "bin/market_item.rs"
bench = false
doctest = false
test = false
